--- a/news.html
+++ b/news.html
@@ -30,7 +30,7 @@
             НОВОСТЬ 1<br> 06.02.2012 Н.А.Симонов
             <p> Суть новости сюдысь
                 </div>
-
+                <div id="footer">Футер</div>
 </body>
 
 </html>
