--- a/pages/goods.html
+++ b/pages/goods.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lamg="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -18,19 +18,22 @@
             <li><a href="pages/contacts.html">Контакты</a></li>
         </ul>
     </div>
+    <div id="content">
+        <img src="images/image.png" alt="Фото автора" width="200" height="250">
     </div>
-    НОВОСТЬ 1<br> 03.08.2019 М.И.Макаров
-    <p> Суть новости сюдысь
-        </div>
-        </div>
-        НОВОСТЬ 2<br> 01.03.2014 М.И.Макаров
-        <p> Суть новости сюдысь
-            </div>
-            </div>
-            НОВОСТЬ 1<br> 06.02.2012 Н.А.Симонов
-            <p> Суть новости сюдысь
-                </div>
-                <div id="footer">Футер</div>
+    <p> Хлеб </p>
+    <p> 30р </p>
+    <div id="content">
+        <img src="images/i.png" alt="Фото автора" width="200" height="250">
+    </div>
+    <p> Вино </p>
+    <p> 800р </p>
+    <div id="content"></div>
+    <img src="images/9.png" alt="Фото автора" width="200" height="250">
+    </div>
+    <p> Чупачупс </p>
+    <p> 15р </p>
+    <div id="footer">Футер</div>
 </body>
 
 </html>
