--- a/index.html
+++ b/index.html
@@ -20,25 +20,29 @@
     </div>
     <div id="content">
         <p>Информация об авторе</p>
-        <img src="images/photo.png" alt="Фото автора" width="200" height="250">
-        <p>Иванов Иван Иванович</p>
-        <p>ЭФБО-00-00</p>
-        <p>Обо мне: Я родился в Москве в 70-м на краю города. Глупость рано ударила в голову. В четыре активно ругался. Потом школа, форма, драки, клей. Так я становился сильней. Воровал деньги в раздевалке.
+        <img src="images/shark.png" alt="Фото автора" width="200" height="250">
+        <p>Ковалишин Александр Александрович</p>
+        <p>ЭФБО-13-24</p>
+        <p>Обо мне: Чисто московский огурчик
         </p>
         <div>Навык 1</div>
+        <p> Могу жить на сигаретах и солнце </p>
         <div>Навык 2</div>
+        <p> тых тых тых </p>
         <div>Навык 3</div>
+        <p> пых пых пых пых </p>
         <div>Навык 4</div>
+        <p> гы гы гы гы гы</p>
         <div>
             Мой опыт работы:
             <div>
-                Опыт 1<br> Работал фантазёром. Сочинял и праздновал.
+                Опыт 1<br> Номинант на премию по ничегонеделанию.
             </div>
             <div>
-                Опыт 2<br> Работал воровством. Воровал и продавал.
+                Опыт 2<br> Рекордсмен книги рекордов гиннесса по сну (48 часов)
             </div>
             <div>
-                Опыт 3<br> Работал рэпером. Читал и пел.
+                Опыт 3<br> Ученый генной инженерии (могу сделать из мухи слона)
             </div>
         </div>
     </div>
