--- a/index.html
+++ b/index.html
@@ -23,35 +23,35 @@
         <div class="content">
             <div class="profile-header">
                 <h1 class="profile-title">Информация об авторе</h1>
-                <img class="profile-photo" src="images/photo.png" alt="Фото автора">
-                <h2 class="profile-name">Иванов Иван Иванович</h2>
-                <p class="profile-group">ЭФБО-00-00</p>
+                <img class="profile-photo" src="images/shark.png" alt="Фото автора">
+                <h2 class="profile-name">Ковалишин Александр Александрович</h2>
+                <p class="profile-group">ЭФБО-13-24</p>
             </div>
 
             <div class="about-me">
-                <p>Обо мне: Я родился в Москве в 70-м на краю города. Глупость рано ударила в голову. В четыре активно ругался. Потом школа, форма, драки, клей. Так я становился сильней. Воровал деньги в раздевалке.</p>
+                <p>Московский огурчик.</p>
             </div>
 
             <div class="skills-container">
-                <div class="skill-tag">Навык 1</div>
-                <div class="skill-tag">Навык 2</div>
-                <div class="skill-tag">Навык 3</div>
-                <div class="skill-tag">Навык 4</div>
+                <div class="skill-tag">Лучший</div>
+                <div class="skill-tag">Лучший2Х</div>
+                <div class="skill-tag">Лучший3Х</div>
+                <div class="skill-tag">Лучший4Х</div>
             </div>
 
             <div class="experience-section">
                 <h2 class="section-title">Мой опыт работы</h2>
                 <div class="experience-card">
                     <h3 class="experience-title">Опыт 1</h3>
-                    <p class="experience-desc">Работал фантазёром. Сочинял и праздновал.</p>
+                    <p class="experience-desc">Белые темки</p>
                 </div>
                 <div class="experience-card">
                     <h3 class="experience-title">Опыт 2</h3>
-                    <p class="experience-desc">Работал воровством. Воровал и продавал.</p>
+                    <p class="experience-desc">Серые темки</p>
                 </div>
                 <div class="experience-card">
                     <h3 class="experience-title">Опыт 3</h3>
-                    <p class="experience-desc">Работал рэпером. Читал и пел.</p>
+                    <p class="experience-desc">Тёмные темки</p>
                 </div>
             </div>
         </div>
