--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,27 +1,41 @@
 ﻿<!DOCTYPE html>
-<html lamg="ru">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Семестровая работа</title>
+    <title>Контакты - Семестровая работа</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 
 <body>
-    <div id="header">Хэдер</div>
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="pages/news.html">Новости</a></li>
-            <li><a href="pages/practices.html">Практики</a></li>
-            <li><a href="pages/goods.html">Товары</a></li>
-            <li><a href="pages/contacts.html">Контакты</a></li>
-        </ul>
+    <div class="page-container">
+        <div class="header">Хэдер</div>
+        <div class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="contacts-section">
+                <h1 class="section-title">Контакты</h1>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <strong>Адрес электронной почты:</strong><br> kovalishin.a.a@edu.mirea.ru
+                    </div>
+                    <div class="contact-item">
+                        <strong>Адрес:</strong><br> г. Москва, ул. Ломоносова, д. 6
+                    </div>
+                    <button class="contact-button">Позвоните мне</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer">Футер</div>
     </div>
-    <div id="content">
-        <p>Адрес электронной почты: kovalishin.a.a@edu.mirea.ru</p>
-        <p> Адрес: г. Москва, ул. Ломоносова, д. 6</p>
-        <button> Позвоните мне </button>
 </body>
 
 </html>
