--- a/pages/practices.html
+++ b/pages/practices.html
@@ -1,1 +1,40 @@
-﻿
+﻿<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Практики - Семестровая работа</title>
+    <link rel="stylesheet" href="../style/styles.css">
+</head>
+
+<body>
+    <div class="page-container">
+        <div class="header">Хэдер</div>
+        <div class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="experience-section">
+                <h1 class="section-title">Практики</h1>
+                <div class="experience-card">
+                    <h3 class="experience-title">Практика 1</h3>
+                    <p class="experience-desc">Описание первой практики и полученного опыта.</p>
+                </div>
+                <div class="experience-card">
+                    <h3 class="experience-title">Практика 2</h3>
+                    <p class="experience-desc">Описание второй практики и достигнутых результатов.</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer">Футер</div>
+    </div>
+</body>
+
+</html>
